// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments-to-region snapshot tests block-comments 1`] = `
"'use strict';

/**
 * A custom element
 *
 * @module my-element
 * @type {HTMLElement}
 */

function helper() {
  return 'help';
}

var dependency = require('a-dependency');

var MyElementProto = Object.create(HTMLElement.prototype);
MyElementProto.STA_TIC = 'static property';

var _inTheScope = 42;

//#region Custom Element API

MyElementProto.createdCallback = function() {
  this._data = null; /* Ignore me */
  this._onClick = this._onClick.bind(this);
  this.innerHTML = '<span>OH HAI</span>';
};

MyElementProto.attachedCallback = function() {
  this.addEventListener('click', this._onClick);
};

MyElementProto.detachedCallback = function() {
  this.removeEventListener('click', this._onClick);
  this._destroy();
};

//#endregion

//#region Public Methods

MyElementProto.getData = function() {
  return this._data;
};

MyElementProto.setData = function(data) {
  this._data = data;
};

//#endregion

//#region Private Methods

MyElementProto._onClick = function(event) {
  console.log('ORLY?')
};

//#endregion

//#region Registeration of the Custom Element

module.exports = document.registerElement('my-element', { prototype: MyElementProto });
module.exports.STA_TIC = MyElementProto.STA_TIC;

//#endregion"
`;

exports[`comments-to-region snapshot tests line-comments 1`] = `
"function helper() {
  return 'help';
}

//#region Custom Element API

MyElementProto.createdCallback = function() {
  this._data = null; // ignore me
  this._onClick = this._onClick.bind(this);
  this.innerHTML = '<span>OH HAI</span>';
};

//#endregion

//#region Private Methods

MyElementProto._onClick = function(event) {
  console.log('ORLY?')
};

//#endregion

//#region Registeration of the Custom Element

module.exports = document.registerElement('my-element', { prototype: MyElementProto });
module.exports.STA_TIC = MyElementProto.STA_TIC;

//#endregion"
`;
